--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.6",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.4.2",
     "nodemon": "^1.14.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
